--- a/css/about.css
+++ b/css/about.css
@@ -93,12 +93,37 @@ ul {
     color: #000000;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+
+/* Footer */
 .footer {
     background-color: #000000;
     color: #ffffff;
     padding: 10px;
     text-align: center;
-    position: relative;
-    bottom: 0;
     width: 100%;
+    margin-top: auto;
+}
+
+/* Footer Links */
+.footer a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+}
+
+.footer a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background: linear-gradient(90deg, yellow, orange);
+    transition: width 0.3s ease;
+}
+
+.footer a:hover::after {
+    width: 100%;  /* Full width on hover */
+    transition: width 0.5s ease;
 }
