--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,8 @@ body {
     margin: 0px;
     font-family: Arial, sans-serif;
     background-color: #121212;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 main {
     margin: 20px;
